EKS_Special/4_network/kubernetes/calico-app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stage
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foo
  namespace: stage
spec:
  selector:
    matchLabels:
      app: foo
  replicas: 1
  template:
    metadata:
      labels:
        app: foo
        role: was
    spec:
      containers:
      - name: foo
        image: nginx:1.14.2
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 128m
            memory: 64Mi
          limits:
            cpu: 256m
            memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: foo
  namespace: stage
spec:
  selector:
    app: foo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bar
  namespace: stage
spec:
  selector:
    matchLabels:
      app: bar
  replicas: 1
  template:
    metadata:
      labels:
        app: bar
        role: was
    spec:
      containers:
      - name: bar
        image: nginx:1.14.2
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 128m
            memory: 64Mi
          limits:
            cpu: 256m
            memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: bar
  namespace: stage
spec:
  selector:
    app: bar
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: stage
spec:
  selector:
    matchLabels:
      app: mysql
  replicas: 1
  template:
    metadata:
      labels:
        app: mysql
        role: db
    spec:
      containers:
      - name: mysql
        image: mysql:8.0.26
        ports:
        - containerPort: 3306
        resources:
          requests:
            cpu: 1000m
            memory: 1Gi
